About dialog, start of home panel

--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -11,7 +11,11 @@
   
     <Application.Styles>
         <FluentTheme />
-        <Style Selector="TextBlock.header">
+        <Style Selector="TextBlock.h1">
+            <Setter Property="FontSize" Value="32"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+        <Style Selector="TextBlock.h2">
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
