--- a/src/SerialLoops/Views/MainWindow.axaml
+++ b/src/SerialLoops/Views/MainWindow.axaml
@@ -14,6 +14,7 @@
         Height="{Binding ClientSize.Height}"
         ClosingBehavior="OwnerAndChildWindows"
         Closing="Window_Closing"
+        Closed="Window_Closed"
         Icon="/Assets/serial-loops.ico"
         Title="{Binding Title}">
 
