--- a/src/SerialLoops/Views/Panels/HomePanel.axaml
+++ b/src/SerialLoops/Views/Panels/HomePanel.axaml
@@ -12,40 +12,43 @@
         <vm:HomePanelViewModel/>
     </Design.DataContext>
 
-    <StackPanel HorizontalAlignment="Center">
-        <StackPanel Margin="15" Spacing="5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Image Source="resm:SerialLoops.Assets.Icons.AppIcon.png?assembly=SerialLoops" Width="64" Height="64"/>
-            <TextBlock Classes="h1" Text="Serial Loops"/>
+    <DockPanel>
+        <NativeMenuBar DockPanel.Dock="Top"/>
+        <StackPanel DockPanel.Dock="Bottom" HorizontalAlignment="Center">
+            <StackPanel Margin="15" Spacing="5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Image Source="resm:SerialLoops.Assets.Icons.AppIcon.png?assembly=SerialLoops" Width="96"/>
+                <TextBlock Classes="h1" Text="Serial Loops"/>
+            </StackPanel>
+            <DockPanel>
+                <StackPanel DockPanel.Dock="Left" Margin="15" Spacing="10" MinWidth="150" MinHeight="400"
+                            Orientation="Vertical">
+                    <TextBlock Classes="h2" Text="{x:Static assets:Strings.Start}"/>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Image Source="resm:SerialLoops.Assets.Icons.New.png?assembly=SerialLoops" Width="16"/>
+                        <TextBlock Classes="link" PointerPressed="NewProject_PointerPressed" Text="{x:Static assets:Strings.New_Project}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Image Source="resm:SerialLoops.Assets.Icons.Open.png?assembly=SerialLoops" Width="16"/>
+                        <TextBlock Classes="link" PointerPressed="OpenProject_PointerPressed" Text="{x:Static assets:Strings.Open_Project}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Image Source="resm:SerialLoops.Assets.Icons.Edit_Save.png?assembly=SerialLoops" Width="16"/>
+                        <TextBlock Classes="link" PointerPressed="EditSaveFile_PointerPressed" Text="{x:Static assets:Strings.Edit_Save_File}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Image Source="resm:SerialLoops.Assets.Icons.Options.png?assembly=SerialLoops" Width="16"/>
+                        <TextBlock Classes="link" PointerPressed="Preferences_PointerPressed" Text="{x:Static assets:Strings.Preferences}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Image Source="resm:SerialLoops.Assets.Icons.Help.png?assembly=SerialLoops" Width="16"/>
+                        <TextBlock Classes="link" PointerPressed="About_PointerPressed" Text="{x:Static assets:Strings.About}"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel DockPanel.Dock="Right" MinWidth="450" MinHeight="400">
+                    
+                </StackPanel>
+            </DockPanel>
         </StackPanel>
-        <DockPanel>
-            <StackPanel DockPanel.Dock="Left" Margin="15" Spacing="10" MinWidth="150" MinHeight="400"
-                        Orientation="Vertical">
-                <TextBlock Classes="h2" Text="{x:Static assets:Strings.Start}"/>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Image Source="resm:SerialLoops.Assets.Icons.New.png?assembly=SerialLoops" Width="16"/>
-                    <TextBlock Classes="link" PointerPressed="NewProject_PointerPressed" Text="{x:Static assets:Strings.New_Project}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Image Source="resm:SerialLoops.Assets.Icons.Open.png?assembly=SerialLoops" Width="16"/>
-                    <TextBlock Classes="link" PointerPressed="OpenProject_PointerPressed" Text="{x:Static assets:Strings.Open_Project}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Image Source="resm:SerialLoops.Assets.Icons.Edit_Save.png?assembly=SerialLoops" Width="16"/>
-                    <TextBlock Classes="link" PointerPressed="EditSaveFile_PointerPressed" Text="{x:Static assets:Strings.Edit_Save_File}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Image Source="resm:SerialLoops.Assets.Icons.Options.png?assembly=SerialLoops" Width="16"/>
-                    <TextBlock Classes="link" PointerPressed="Preferences_PointerPressed" Text="{x:Static assets:Strings.Preferences}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Image Source="resm:SerialLoops.Assets.Icons.Help.png?assembly=SerialLoops" Width="16"/>
-                    <TextBlock Classes="link" PointerPressed="About_PointerPressed" Text="{x:Static assets:Strings.About}"/>
-                </StackPanel>
-            </StackPanel>
-            <StackPanel DockPanel.Dock="Right" MinWidth="450" MinHeight="400">
-                
-            </StackPanel>
-        </DockPanel>
-    </StackPanel>
+    </DockPanel>
     
 </UserControl>
