--- a/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="using:SerialLoops.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:UpdateAvailableDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.UpdateAvailableDialog"
@@ -29,8 +30,8 @@
         </StackPanel>
         <TextBox Focusable="False" Width="750" Height="350" Grid.Row="2" Grid.Column="0"
                     Text="{Binding Changelog}" TextWrapping="Wrap" Margin="0 15 0 10"/>
-        <TextBlock Classes="link" Text="{x:Static assets:Strings.Download_release_from_GitHub}"
-                    Grid.Row="3" Grid.Column="0" PointerPressed="ReleaseLink_PointerPressed"/>
+        <controls:LinkButton Text="{x:Static assets:Strings.Download_release_from_GitHub}"
+                    Grid.Row="3" Grid.Column="0" OnClick="ReleaseLink_Click"/>
         <StackPanel Grid.Row="5" Grid.Column="0" Orientation="Horizontal" Spacing="20">
             <Button Content="{x:Static assets:Strings.Download_from_GitHub}" Command="{Binding OpenReleaseLinkCommand}"/>
             <Button Content="{x:Static assets:Strings.Skip_Update}" Command="{Binding CloseCommand}"/>
