--- a/src/SerialLoops/Controls/LinkButton.axaml
+++ b/src/SerialLoops/Controls/LinkButton.axaml
@@ -4,5 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SerialLoops.Controls.LinkButton">
-    <TextBlock Classes="link#enabled" IsEnabled="True" Name="LinkText" PointerPressed="Action_Execute"/>
+    <Grid>
+        <TextBlock Classes="link" IsEnabled="True" Name="LinkText"/>
+        <Button Cursor="Hand" Background="Transparent" Width="{Binding #LinkText.Bounds.Size.Width}" Height="{Binding #LinkText.Bounds.Size.Height}" Click="Action_Execute"/>
+    </Grid>
 </UserControl>
