--- a/src/SerialLoops/Controls/LinkButton.axaml
+++ b/src/SerialLoops/Controls/LinkButton.axaml
@@ -6,6 +6,8 @@
              x:Class="SerialLoops.Controls.LinkButton">
     <Grid>
         <TextBlock Classes="link" IsEnabled="True" Name="LinkText"/>
-        <Button Cursor="Hand" Background="Transparent" Width="{Binding #LinkText.Bounds.Size.Width}" Height="{Binding #LinkText.Bounds.Size.Height}" Click="Action_Execute"/>
+        <!-- TODO: (Maybe?) Remove this kludge (routes around https://github.com/AvaloniaUI/Avalonia/issues/15281) -->
+        <Button Cursor="Hand" Background="Transparent" Width="{Binding #LinkText.Bounds.Size.Width}"
+                Height="{Binding #LinkText.Bounds.Size.Height}" Click="Action_Execute"/>
     </Grid>
 </UserControl>
