--- a/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="using:SerialLoops.Controls"
+        xmlns:md="using:Markdown.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:UpdateAvailableDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.UpdateAvailableDialog"
@@ -28,8 +29,8 @@
             <Image Source="avares://SerialLoops/Assets/Icons/Update.png" Width="16" Height="16"/>
             <TextBlock Text="{x:Static assets:Strings.A_new_update_for_Serial_Loops_is_available_}"/>
         </StackPanel>
-        <TextBox Focusable="False" Width="750" Height="350" Grid.Row="2" Grid.Column="0"
-                    Text="{Binding Changelog}" TextWrapping="Wrap" Margin="0 15 0 10"/>
+        <md:MarkdownScrollViewer Width="750" Height="350" Grid.Row="2" Grid.Column="0"
+                                 Markdown="{Binding Changelog}" />
         <controls:LinkButton Text="{x:Static assets:Strings.Download_release_from_GitHub}"
                     Grid.Row="3" Grid.Column="0" OnClick="ReleaseLink_Click"/>
         <StackPanel Grid.Row="5" Grid.Column="0" Orientation="Horizontal" Spacing="20">
