--- a/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
-        xmlns:labs="using:Avalonia.Labs.Controls"
+        xmlns:controls="using:SerialLoops.Controls"
+        xmlns:gbox="using:GroupBox.Avalonia.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:ImageCropResizeDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ImageCropResizeDialog"
@@ -13,5 +14,35 @@
         Padding="10"
         Icon="/Assets/serial-loops.ico"
         Title="{x:Static assets:Strings.Crop___Scale}">
-    
+    <StackPanel Orientation="Vertical" Spacing="5" HorizontalAlignment="Center">
+        <StackPanel Orientation="Horizontal" Margin="5">
+            <controls:SKCropResizeCanvas SourceBitmap="{Binding StartImage}" PreviewBitmap="{Binding PreviewImage}"
+                                         FinalBitmap="{Binding FinalImage}" PreviewWidth="{Binding PreviewWidth}"
+                                         PreviewHeight="{Binding PreviewHeight}" ImageLocation="{Binding ImageLocation}"
+                                         SelectionAreaLocation="{Binding SelectionLocation}"
+                                         PreserveAspectRatio="{Binding PreserveAspectRatio}"
+                                         Width="650" Height="600" Name="PreviewCanvas"/>
+            <StackPanel Orientation="Vertical" Spacing="5">
+                <gbox:GroupBox Header="{x:Static assets:Strings.Scale_Image}" Width="200" Padding="5">
+                    <StackPanel Orientation="Vertical" Spacing="5" Margin="5">
+                        <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center" HorizontalAlignment="Right">
+                            <TextBlock Text="{x:Static assets:Strings.Size_}"/>
+                            <StackPanel Orientation="Vertical">
+                                <NumericUpDown Name="WidthStepper" Value="{Binding #PreviewCanvas.PreviewWidth}" />
+                                <NumericUpDown Name="HeightStepper" Value="{Binding #PreviewCanvas.PreviewHeight}" />
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
+                            <TextBlock Text="{x:Static assets:Strings.Preserve_Aspect_Ratio_}"/>
+                            <CheckBox IsChecked="{Binding PreserveAspectRatio}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
+                            <TextBlock Text="{x:Static assets:Strings.Scale_to_Fit_}"/>
+                            <Button Content="{x:Static assets:Strings.Apply}" Command="{Binding ScaleToFitCommand}"/>
+                        </StackPanel>
+                    </StackPanel>
+                </gbox:GroupBox>
+            </StackPanel>
+        </StackPanel>
+    </StackPanel>
 </Window>
