Add icon to project creation dialog

--- a/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
@@ -14,6 +14,7 @@
         Padding="10"
         x:DataType="vm:ProjectCreationDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ProjectCreationDialog"
+        Icon="/Assets/serial-loops.ico"
         Title="{x:Static assets:Strings.Create_New_Project}"
         Name="PCDialog">
     
