--- a/src/SerialLoops/Controls/SoundPlayerPanel.axaml
+++ b/src/SerialLoops/Controls/SoundPlayerPanel.axaml
@@ -3,6 +3,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="using:SerialLoops.ViewModels.Controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="using:Avalonia.Xaml.Interactivity"
+             xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
              xmlns:controls="using:SerialLoops.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:SoundPlayerPanelViewModel"
@@ -18,7 +20,18 @@
             <controls:SKBitmapCanvas Name="WaveformCanvas"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Spacing="5" Name="Details">
-            <ContentControl Content="{Binding TrackName}"/>
+            <StackPanel Name="TrackTitlePanel">
+                <TextBox Name="TrackNameBox" IsVisible="{Binding UseTextBoxForTrackName}" Width="200"
+                         Text="{Binding TrackName}">
+                    <i:Interaction.Behaviors>
+                        <ia:EventTriggerBehavior EventName="TextChanged" SourceObject="{Binding #TrackNameBox}">
+                            <ia:InvokeCommandAction Command="{Binding TrackNameCommand}" 
+                                                    CommandParameter="{Binding #TrackNameBox.Text}" />
+                        </ia:EventTriggerBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBlock IsVisible="{Binding !UseTextBoxForTrackName}" Text="{Binding TrackName}"/>
+            </StackPanel>
             <StackPanel Orientation="Horizontal" Spacing="5" Name="ExtraDetails">
                 <TextBlock Text="{Binding TrackDetails}"/>
                 <TextBlock Text="{Binding TrackFlag}"/>
