--- a/src/SerialLoops/Views/Editors/BackgroundMusicEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/BackgroundMusicEditorView.axaml
@@ -9,7 +9,7 @@
              x:DataType="vm:BackgroundMusicEditorViewModel"
              x:Class="SerialLoops.Views.Editors.BackgroundMusicEditorView">
     <Grid RowDefinitions="Auto,Auto,Auto,*">
-        <controls:SoundPlayerPanel Grid.Row="0" DataContext="{Binding SoundPlayerViewModel}"/>
+        <controls:SoundPlayerPanel Name="Player" Grid.Row="0" DataContext="{Binding SoundPlayerViewModel}"/>
         <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="3" Margin="2">
             <Button Content="{x:Static assets:Strings.Manage_Loop}" Command="{Binding ManageLoopCommand}"/>
             <Button Content="{x:Static assets:Strings.Adjust_Volume}" Command="{Binding AdjustVolumeCommand}"/>
