--- a/src/SerialLoops/Views/Panels/EditorTabsPanel.axaml
+++ b/src/SerialLoops/Views/Panels/EditorTabsPanel.axaml
@@ -4,6 +4,8 @@
              xmlns:vm="using:SerialLoops.ViewModels.Panels"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             xmlns:i="using:Avalonia.Xaml.Interactivity"
+             xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
              xmlns:controls="using:SerialLoops.Controls"
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:editors="using:SerialLoops.ViewModels.Editors"
@@ -19,12 +21,18 @@
     </UserControl.Resources>
     
     <tab:TabsControl Name="Tabs" ShowDefaultAddButton="False" ItemsSource="{Binding Tabs}"
-                     ContainerClearing="Tabs_PageClosed" SelectionChanged="Tabs_PageChanged"
-                     LastTabClosedAction="{x:Null}">
+                     ContainerClearing="Tabs_ContainerClearing"
+                     SelectedItem="{Binding SelectedTab}" LastTabClosedAction="{x:Null}">
+        <i:Interaction.Behaviors>
+            <ia:EventTriggerBehavior EventName="SelectionChanged" SourceObject="{Binding #Tabs}">
+                <ia:InvokeCommandAction Command="{Binding TabSwitchedCommand}"/>
+            </ia:EventTriggerBehavior>
+        </i:Interaction.Behaviors>
         <tab:TabsControl.ItemTemplate>
             <DataTemplate DataType="editors:EditorViewModel">
                 <StackPanel Orientation="Horizontal" Spacing="3">
-                    <Image Source="avares://SerialLoops/Assets/Icons/Character_Sprite.png" Width="16"/>
+                    <Image Source="{Binding Description.Type, Converter={x:Static utility:SLConverters.ItemTypeToIconConverter}}"
+                           Width="16"/>
                     <TextBlock FontSize="12">
                         <TextBlock.Text>
                             <MultiBinding Converter="{StaticResource DisplayNameConverter}">
