--- a/src/SerialLoops/Views/Panels/OpenProjectPanel.axaml
+++ b/src/SerialLoops/Views/Panels/OpenProjectPanel.axaml
@@ -18,7 +18,7 @@
     <Grid RowDefinitions="Auto,*">
         <StackPanel Grid.Row="0">
             <NativeMenuBar Name="MenuBar"/>
-            <toolbar:Toolbar Height="60" Name="ToolBar" DisplayMode="Normal" HorizontalAlignment="Right" />
+            <toolbar:Toolbar Height="60" Name="ToolBar" HorizontalAlignment="Right" />
         </StackPanel>
         <Grid Grid.Row="1" ColumnDefinitions="Auto,*">
             <panels:ItemExplorerPanel Grid.Column="0" Name="ItemExplorer" DataContext="{Binding Explorer}" Width="300"/>
