--- a/src/SerialLoops/Views/Dialogs/BgmLoopPropertiesDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/BgmLoopPropertiesDialog.axaml
@@ -56,17 +56,18 @@
         <StackPanel Orientation="Vertical" Spacing="5">
             <controls:SKBitmapCanvas Source="{Binding Waveform}" Width="{Binding Waveform.Width}"
                                      Height="{Binding Waveform.Height}"/>
-            <Slider Name="StartSampleSlider" Width="{Binding Waveform.Width}" Minimum="{Binding #StartSampleBox.Minimum}"
-                    Maximum="{Binding #EndSampleBox.Maximum}" Value="{Binding #StartSampleBox.Value}"/>
-            <Slider Name="EndSampleSlider" Width="{Binding Waveform.Width}" Minimum="{Binding #StartSampleBox.Minimum}"
-                    MaxHeight="{Binding #EndSampleBox.Maximum}" Value="{Binding #EndSampleBox.Value}"/>
+            <Slider Name="StartSampleSlider" Width="{Binding Waveform.Width}" Minimum="0"
+                    Maximum="{Binding #EndSampleBox.Maximum}"
+                    ValueChanged="StartSlider_ValueChanged" />
+            <Slider Name="EndSampleSlider" Width="{Binding Waveform.Width}" Minimum="0"
+                    Maximum="{Binding #EndSampleBox.Maximum}"
+                    ValueChanged="EndSlider_ValueChanged"/>
             <StackPanel Orientation="Vertical" Spacing="3" HorizontalAlignment="Right" Width="{Binding Waveform.Width}">
                 <StackPanel Orientation="Horizontal" Spacing="3">
                     <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}"
                             CommandParameter="{Binding #BgmLoopPropsDialog}"/>
                     <Button Content="{x:Static assets:Strings.Cancel}" IsCancel="True" Command="{Binding CancelCommand}"
                             CommandParameter="{Binding #BgmLoopPropsDialog}"/>
-                    <Button Command="{Binding DebugCommand}">Debug</Button>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
