--- a/src/SerialLoops/Views/Panels/EditorTabsPanel.axaml
+++ b/src/SerialLoops/Views/Panels/EditorTabsPanel.axaml
@@ -31,9 +31,8 @@
         <tab:TabsControl.ItemTemplate>
             <DataTemplate DataType="editors:EditorViewModel">
                 <StackPanel Orientation="Horizontal" Spacing="3">
-                    <Image Source="{Binding Description.Type, Converter={x:Static utility:SLConverters.ItemTypeToIconConverter}}"
-                           Width="16"/>
-                    <TextBlock FontSize="12">
+                    <Svg Path="{Binding Description.Type, StringFormat='avares://SerialLoops/Assets/Icons/{0}.svg'}" Width="18"/>
+                    <TextBlock FontSize="14" Padding="0 1 8 1">
                         <TextBlock.Text>
                             <MultiBinding Converter="{StaticResource DisplayNameConverter}">
                                 <Binding Path="Description.DisplayName"/>
