--- a/src/SerialLoops/Views/Panels/HomePanel.axaml
+++ b/src/SerialLoops/Views/Panels/HomePanel.axaml
@@ -13,41 +13,43 @@
         <vm:HomePanelViewModel/>
     </Design.DataContext>
 
-    <StackPanel HorizontalAlignment="Center">
-        <StackPanel Margin="15" Spacing="5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Svg Path="avares://SerialLoops/Assets/Icons/AppIcon.svg" Width="96"/>
-            <TextBlock Classes="h1" Text="Serial Loops"/>
+    <DockPanel>
+        <StackPanel DockPanel.Dock="Bottom" HorizontalAlignment="Center">
+            <StackPanel Margin="15" Spacing="5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Svg Path="avares://SerialLoops/Assets/Icons/AppIcon.svg" Width="96"/>
+                <TextBlock Classes="h1" Text="Serial Loops"/>
+            </StackPanel>
+            <DockPanel>
+                <StackPanel DockPanel.Dock="Left" Margin="15" Spacing="10" MinWidth="150" MinHeight="400"
+                            Orientation="Vertical">
+                    <TextBlock Classes="h2" Text="{x:Static assets:Strings.Start}"/>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Svg Path="avares://SerialLoops/Assets/Icons/New.svg" Width="16"/>
+                        <controls:LinkButton OnClick="NewProject_PointerPressed" Text="{x:Static assets:Strings.New_Project}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Svg Path="avares://SerialLoops/Assets/Icons/Open.svg" Width="16"/>
+                        <controls:LinkButton OnClick="OpenProject_PointerPressed" Text="{x:Static assets:Strings.Open_Project}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Svg Path="avares://SerialLoops/Assets/Icons/Edit_Save.svg" Width="16"/>
+                        <controls:LinkButton OnClick="EditSaveFile_PointerPressed" Text="{x:Static assets:Strings.Edit_Save_File}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Svg Path="avares://SerialLoops/Assets/Icons/Options.svg" Width="16"/>
+                        <controls:LinkButton OnClick="Preferences_PointerPressed" Text="{x:Static assets:Strings.Preferences}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16"/>
+                        <controls:LinkButton OnClick="About_PointerPressed" Text="{x:Static assets:Strings.About}"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel DockPanel.Dock="Right" Margin="13" Spacing="10" MinWidth="450" MinHeight="400">
+                    <TextBlock Classes="h2" Text="{x:Static assets:Strings.Recents}"/>
+                    <StackPanel Spacing="15" Name="RecentsPanel"/>
+                </StackPanel>
+            </DockPanel>
         </StackPanel>
-        <DockPanel>
-            <StackPanel DockPanel.Dock="Left" Margin="15" Spacing="10" MinWidth="150" MinHeight="400"
-                        Orientation="Vertical">
-                <TextBlock Classes="h2" Text="{x:Static assets:Strings.Start}"/>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Svg Path="avares://SerialLoops/Assets/Icons/New.svg" Width="16"/>
-                    <controls:LinkButton OnClick="NewProject_PointerPressed" Text="{x:Static assets:Strings.New_Project}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Svg Path="avares://SerialLoops/Assets/Icons/Open.svg" Width="16"/>
-                    <controls:LinkButton OnClick="OpenProject_PointerPressed" Text="{x:Static assets:Strings.Open_Project}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Svg Path="avares://SerialLoops/Assets/Icons/Edit_Save.svg" Width="16"/>
-                    <controls:LinkButton OnClick="EditSaveFile_PointerPressed" Text="{x:Static assets:Strings.Edit_Save_File}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Svg Path="avares://SerialLoops/Assets/Icons/Options.svg" Width="16"/>
-                    <controls:LinkButton OnClick="Preferences_PointerPressed" Text="{x:Static assets:Strings.Preferences}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Spacing="5">
-                    <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16"/>
-                    <controls:LinkButton OnClick="About_PointerPressed" Text="{x:Static assets:Strings.About}"/>
-                </StackPanel>
-            </StackPanel>
-            <StackPanel DockPanel.Dock="Right" Margin="13" Spacing="10" MinWidth="450" MinHeight="400">
-                <TextBlock Classes="h2" Text="{x:Static assets:Strings.Recents}"/>
-                <StackPanel Spacing="15" Name="RecentsPanel"/>
-            </StackPanel>
-        </DockPanel>
-    </StackPanel>
+    </DockPanel>
     
 </UserControl>
